--- a/index.html
+++ b/index.html
@@ -1,80 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Browser extensions manager UI</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Frontend Mentor | Browser extensions manager UI</title>
+  </head>
+  <body>
+    <header>
+      <div class="extension-header">
+        <img src="./assets/images/logo.svg" alt="logo" class="logo-icon" />
+        <button type="button" class="moon-icon">
+          <img src="./assets/images/icon-moon.svg" alt="moon-icon" />
+        </button>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+        <button type="button" class="sun-icon hidden">
+          <img src="./assets/images/icon-sun.svg" alt="sun-icon" />
+        </button>
+      </div>
+    </header>
+    <main class="main-container">
+      <h2>Extensions List</h2>
+      <div class="filter-container">
+        <button>All</button>
+        <button>Active</button>
+        <button>Inactive</button>
+      </div>
 
-  Extensions List
+      <div class="main-card-container">
+        <div class="card-container">
+          <div class="info-container">
+            <img src="./assets/images/logo-devlens.svg" alt="devlens-logo" />
+            <div>
+              <p>DevLens</p>
+              <p>
+                Quickly inspect page layouts and visualize element boundaries.
+              </p>
+            </div>
+          </div>
+          <div class="button-container">
+            <button type="button" >Remove</button>
+            <div class="active-inactive-container">
+              <label class="switch">
+                <input type="checkbox" />
+                <span class="slider"></span>
+              </label>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
 
-  All
-  Active
-  Inactive
+    <!-- If you plan to use the JSON file to populate the data dynamically, you can delete the content below -->
 
-  <!-- If you plan to use the JSON file to populate the data dynamically, you can delete the content below -->
+    <!-- Remove StyleSpy Instantly analyze and copy CSS from any webpage element.
+    Remove SpeedBoost Optimizes browser resource usage to accelerate page
+    loading. Remove JSONWizard Formats, validates, and prettifies JSON responses
+    in-browser. Remove TabMaster Pro Organizes browser tabs into groups and
+    sessions. Remove ViewportBuddy Simulates various screen resolutions directly
+    within the browser. Remove Markup Notes Enables annotation and notes
+    directly onto webpages for collaborative debugging. Remove GridGuides
+    Overlay customizable grids and alignment guides on any webpage. Remove
+    Palette Picker Instantly extracts color palettes from any webpage. Remove
+    LinkChecker Scans and highlights broken links on any page. Remove DOM
+    Snapshot Capture and export DOM structures quickly. Remove ConsolePlus
+    Enhanced developer console with advanced filtering and logging. Remove -->
 
-  DevLens
-  Quickly inspect page layouts and visualize element boundaries.
-  Remove
-
-  StyleSpy
-  Instantly analyze and copy CSS from any webpage element.
-  Remove
-
-  SpeedBoost
-  Optimizes browser resource usage to accelerate page loading.
-  Remove
-
-  JSONWizard
-  Formats, validates, and prettifies JSON responses in-browser.
-  Remove
-
-  TabMaster Pro
-  Organizes browser tabs into groups and sessions.
-  Remove
-
-  ViewportBuddy
-  Simulates various screen resolutions directly within the browser.
-  Remove
-
-  Markup Notes
-  Enables annotation and notes directly onto webpages for collaborative debugging.
-  Remove
-
-  GridGuides
-  Overlay customizable grids and alignment guides on any webpage.
-  Remove
-
-  Palette Picker
-  Instantly extracts color palettes from any webpage.
-  Remove
-
-  LinkChecker
-  Scans and highlights broken links on any page.
-  Remove
-
-  DOM Snapshot
-  Capture and export DOM structures quickly.
-  Remove
-
-  ConsolePlus
-  Enhanced developer console with advanced filtering and logging.
-  Remove
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by
+      <a href="https://github.com/SubagaS" target="_blank">Subaga Sreepathy</a>.
+    </div>
+    <script src="./scripts/script.js"></script>
+  </body>
 </html>
